Added photos and changed border

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <div class="gallery">
             <h1 class="title">My New Gallery</h1>
             <div class="container">
-                <div class="imgbox"><img src="" alt=""></div>
-                <div class="imgbox"><img src="" alt=""></div>
-                <div class="imgbox"><img src="" alt=""></div>
-                <div class="imgbox"><img src="" alt=""></div>
-                <div class="imgbox"><img src="" alt=""></div>
-                <div class="imgbox"><img src="" alt=""></div>
-                <div class="imgbox"><img src="" alt=""></div>
-                <div class="imgbox"><img src="" alt=""></div>
+                <div class="imgbox"><img src="assets/annas.jpg" alt="annas"></div>
+                <div class="imgbox"><img src="assets/road.jpg" alt="road"></div>
+                <div class="imgbox"><img src="assets/roses.jpg" alt="roses"></div>
+                <div class="imgbox"><img src="assets/bird.jpg" alt="bird"></div>
+                <div class="imgbox"><img src="assets/jellyfish.jpg" alt="jellyfish"></div>
+                <div class="imgbox"><img src="assets/trees.jpg" alt="trees"></div>
+                <div class="imgbox"><img src="assets/flower.jpg" alt="flower"></div>
+                <div class="imgbox"><img src="assets/forest.jpg" alt="forest"></div>
             </div>
         </div>
     </div>
