image added & style made responsive

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <div class="imgbox"><img src="assets/trees.jpg" alt="trees"></div>
                 <div class="imgbox"><img src="assets/flower.jpg" alt="flower"></div>
                 <div class="imgbox"><img src="assets/forest.jpg" alt="forest"></div>
+                <div class="imgbox"><img src="assets/beach.jpg" alt="beach"></div>
             </div>
         </div>
     </div>
