added respossiveness with flex & sizing properties

--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@
         <div class="gallery">
             <h1 class="title">My New Gallery</h1>
             <div class="container">
-                <div class="imgbox"><img src="assets/annas.jpg" alt="annas"></div>
-                <div class="imgbox"><img src="assets/road.jpg" alt="road"></div>
-                <div class="imgbox"><img src="assets/roses.jpg" alt="roses"></div>
-                <div class="imgbox"><img src="assets/bird.jpg" alt="bird"></div>
-                <div class="imgbox"><img src="assets/jellyfish.jpg" alt="jellyfish"></div>
-                <div class="imgbox"><img src="assets/trees.jpg" alt="trees"></div>
-                <div class="imgbox"><img src="assets/flower.jpg" alt="flower"></div>
-                <div class="imgbox"><img src="assets/forest.jpg" alt="forest"></div>
-                <div class="imgbox"><img src="assets/beach.jpg" alt="beach"></div>
+                <img src="assets/annas.jpg" alt="annas" width="300" height="200" loading="lazy" decoding="sync">
+
+                <img src="assets/road.jpg" alt="road" width="300" height="200" loading="lazy" decoding="sync">
+
+                <img src="assets/roses.jpg" alt="roses" width="300" height="200" loading="lazy" decoding="sync">
+
+                <img src="assets/bird.jpg" alt="bird" width="300" height="200" loading="lazy" decoding="sync">
+
+                <img src="assets/jellyfish.jpg" alt="jellyfish" width="300" height="200" loading="lazy" decoding="sync">
+
+                <img src="assets/trees.jpg" alt="trees" width="300" height="200" loading="lazy" decoding="sync">
+
+                <img src="assets/flower.jpg" alt="flower" width="300" height="200" loading="lazy" decoding="sync">
+
+                <img src="assets/forest.jpg" alt="forest" width="300" height="200" loading="lazy" decoding="sync">
+
+                <img src="assets/beach.jpg" alt="beach" width="300" height="200" loading="lazy" decoding="sync">
             </div>
         </div>
     </div>
